@@ -21,15 +21,19 @@ jimport('joomla.filesystem.folder');
  */
 class MediaControllerFile extends JControllerLegacy
 {
-	/*
+	/**
 	 * The folder we are uploading into
+	 *
+	 * @var   string
 	 */
 	protected $folder = '';
 
 	/**
 	 * Upload one or more files
 	 *
-	 * @since 1.5
+	 * @return  boolean
+	 *
+	 * @since   1.5
 	 */
 	public function upload()
 	{
@@ -38,7 +42,7 @@ class MediaControllerFile extends JControllerLegacy
 		$params = JComponentHelper::getParams('com_media');
 
 		// Get some data from the request
-		$files        = JRequest::getVar('Filedata', '', 'files', 'array');
+		$files        = $this->input->files->get('Filedata', '', 'array');
 		$return       = $this->input->post->get('return-url', null, 'base64');
 		$this->folder = $this->input->get('folder', '', 'path');
 
@@ -63,22 +67,19 @@ class MediaControllerFile extends JControllerLegacy
 			JError::raiseWarning(100, JText::_('COM_MEDIA_ERROR_WARNFILETOOLARGE'));
 			return false;
 		}
-		// Input is in the form of an associative array containing numerically indexed arrays
-		// We want a numerically indexed array containing associative arrays
-		// Cast each item as array in case the Filedata parameter was not sent as such
-		$files = array_map(
-			array($this, 'reformatFilesArray'),
-			(array) $files['name'], (array) $files['type'], (array) $files['tmp_name'], (array) $files['error'], (array) $files['size']
-		);
 
 		// Perform basic checks on file info before attempting anything
 		foreach ($files as &$file)
 		{
+			$file['name']     = JFile::makeSafe($file['name']);
+			$file['filepath'] = JPath::clean(implode(DIRECTORY_SEPARATOR, array(COM_MEDIA_BASE, $this->folder, $file['name'])));
+
 			if ($file['error'] == 1)
 			{
 				JError::raiseWarning(100, JText::_('COM_MEDIA_ERROR_WARNFILETOOLARGE'));
 				return false;
 			}
+
 			if ($file['size'] > ($params->get('upload_maxsize', 0) * 1024 * 1024))
 			{
 				JError::raiseNotice(100, JText::_('COM_MEDIA_ERROR_WARNFILETOOLARGE'));
@@ -109,6 +110,7 @@ class MediaControllerFile extends JControllerLegacy
 		{
 			// The request is valid
 			$err = null;
+
 			if (!MediaHelper::canUpload($file, $err))
 			{
 				// The file can't be upload
@@ -119,6 +121,7 @@ class MediaControllerFile extends JControllerLegacy
 			// Trigger the onContentBeforeSave event.
 			$object_file = new JObject($file);
 			$result = $dispatcher->trigger('onContentBeforeSave', array('com_media.file', &$object_file));
+
 			if (in_array(false, $result, true))
 			{
 				// There are some errors in the plugins
@@ -144,38 +147,13 @@ class MediaControllerFile extends JControllerLegacy
 	}
 
 	/**
-	 * Used as a callback for array_map, turns the multi-file input array into a sensible array of files
-	 * Also, removes illegal characters from the 'name' and sets a 'filepath' as the final destination of the file
-	 *
-	 * @param   string	- file name			($files['name'])
-	 * @param   string	- file type			($files['type'])
-	 * @param   string	- temporary name	($files['tmp_name'])
-	 * @param   string	- error info		($files['error'])
-	 * @param   string	- file size			($files['size'])
-	 *
-	 * @return  array
-	 * @access	protected
-	 */
-	protected function reformatFilesArray($name, $type, $tmp_name, $error, $size)
-	{
-		$name = JFile::makeSafe($name);
-		return array(
-			'name'		=> $name,
-			'type'		=> $type,
-			'tmp_name'	=> $tmp_name,
-			'error'		=> $error,
-			'size'		=> $size,
-			'filepath'	=> JPath::clean(implode(DIRECTORY_SEPARATOR, array(COM_MEDIA_BASE, $this->folder, $name)))
-		);
-	}
-
-	/**
 	 * Check that the user is authorized to perform this action
 	 *
 	 * @param   string   $action - the action to be peformed (create or delete)
 	 *
 	 * @return  boolean
-	 * @access  protected
+	 *
+	 * @since   1.6
 	 */
 	protected function authoriseUser($action)
 	{
@@ -192,7 +170,9 @@ class MediaControllerFile extends JControllerLegacy
 	/**
 	 * Deletes paths from the current path
 	 *
-	 * @since 1.5
+	 * @return  boolean
+	 *
+	 * @since   1.5
 	 */
 	public function delete()
 	{
@@ -204,11 +184,13 @@ class MediaControllerFile extends JControllerLegacy
 		$folder = $this->input->get('folder', '', 'path');
 
 		$redirect = 'index.php?option=com_media&folder=' . $folder;
+
 		if ($tmpl == 'component')
 		{
 			// We are inside the iframe
 			$redirect .= '&view=mediaList&tmpl=component';
 		}
+
 		$this->setRedirect($redirect);
 
 		// Nothing to delete
@@ -230,6 +212,7 @@ class MediaControllerFile extends JControllerLegacy
 		$dispatcher	= JEventDispatcher::getInstance();
 
 		$ret = true;
+
 		foreach ($paths as $path)
 		{
 			if ($path !== JFile::makeSafe($path))
@@ -242,6 +225,7 @@ class MediaControllerFile extends JControllerLegacy
 
 			$fullPath = JPath::clean(implode(DIRECTORY_SEPARATOR, array(COM_MEDIA_BASE, $folder, $path)));
 			$object_file = new JObject(array('filepath' => $fullPath));
+
 			if (is_file($object_file->filepath))
 			{
 				// Trigger the onContentBeforeDelete event.
@@ -262,10 +246,12 @@ class MediaControllerFile extends JControllerLegacy
 			elseif (is_dir($object_file->filepath))
 			{
 				$contents = JFolder::files($object_file->filepath, '.', true, false, array('.svn', 'CVS', '.DS_Store', '__MACOSX', 'index.html'));
+
 				if (empty($contents))
 				{
 					// Trigger the onContentBeforeDelete event.
 					$result = $dispatcher->trigger('onContentBeforeDelete', array('com_media.folder', &$object_file));
+
 					if (in_array(false, $result, true))
 					{
 						// There are some errors in the plugins
