@@ -21,11 +21,12 @@ jimport('joomla.filesystem.folder');
  */
 class MediaControllerFolder extends JControllerLegacy
 {
-
 	/**
 	 * Deletes paths from the current path
 	 *
-	 * @since 1.5
+	 * @return  boolean
+	 *
+	 * @since   1.5
 	 */
 	public function delete()
 	{
@@ -39,11 +40,13 @@ class MediaControllerFolder extends JControllerLegacy
 		$folder = $this->input->get('folder', '', 'path');
 
 		$redirect = 'index.php?option=com_media&folder=' . $folder;
+
 		if ($tmpl == 'component')
 		{
 			// We are inside the iframe
 			$redirect .= '&view=mediaList&tmpl=component';
 		}
+
 		$this->setRedirect($redirect);
 
 		// Just return if there's nothing to do
@@ -66,6 +69,7 @@ class MediaControllerFolder extends JControllerLegacy
 
 		JPluginHelper::importPlugin('content');
 		$dispatcher	= JEventDispatcher::getInstance();
+
 		if (count($paths))
 		{
 			foreach ($paths as $path)
@@ -79,10 +83,12 @@ class MediaControllerFolder extends JControllerLegacy
 
 				$fullPath = JPath::clean(implode(DIRECTORY_SEPARATOR, array(COM_MEDIA_BASE, $folder, $path)));
 				$object_file = new JObject(array('filepath' => $fullPath));
+
 				if (is_file($object_file->filepath))
 				{
 					// Trigger the onContentBeforeDelete event.
 					$result = $dispatcher->trigger('onContentBeforeDelete', array('com_media.file', &$object_file));
+
 					if (in_array(false, $result, true))
 					{
 						// There are some errors in the plugins
@@ -99,10 +105,12 @@ class MediaControllerFolder extends JControllerLegacy
 				elseif (is_dir($object_file->filepath))
 				{
 					$contents = JFolder::files($object_file->filepath, '.', true, false, array('.svn', 'CVS', '.DS_Store', '__MACOSX', 'index.html'));
+
 					if (empty($contents))
 					{
 						// Trigger the onContentBeforeDelete event.
 						$result = $dispatcher->trigger('onContentBeforeDelete', array('com_media.folder', &$object_file));
+
 						if (in_array(false, $result, true))
 						{
 							// There are some errors in the plugins
@@ -123,15 +131,17 @@ class MediaControllerFolder extends JControllerLegacy
 					}
 				}
 			}
-			return $ret;
 		}
+
+		return $ret;
 	}
 
 	/**
 	 * Create a folder
 	 *
-	 * @param string $path Path of the folder to create
-	 * @since 1.5
+	 * @return  boolean
+	 *
+	 * @since   1.5
 	 */
 	public function create()
 	{
@@ -141,7 +151,7 @@ class MediaControllerFolder extends JControllerLegacy
 		$user  = JFactory::getUser();
 
 		$folder      = $this->input->get('foldername', '');
-		$folderCheck = JRequest::getVar('foldername', null, '', 'string', JREQUEST_ALLOWRAW);
+		$folderCheck = (string) $this->input->get('foldername', null, 'raw');
 		$parent      = $this->input->get('folderbase', '', 'path');
 
 		$this->setRedirect('index.php?option=com_media&folder=' . $parent . '&tmpl=' . $this->input->get('tmpl', 'index'));
@@ -167,6 +177,7 @@ class MediaControllerFolder extends JControllerLegacy
 			}
 
 			$path = JPath::clean(COM_MEDIA_BASE . '/' . $parent . '/' . $folder);
+
 			if (!is_dir($path) && !is_file($path))
 			{
 				// Trigger the onContentBeforeSave event.
@@ -174,6 +185,7 @@ class MediaControllerFolder extends JControllerLegacy
 				JPluginHelper::importPlugin('content');
 				$dispatcher	= JEventDispatcher::getInstance();
 				$result = $dispatcher->trigger('onContentBeforeSave', array('com_media.folder', &$object_file));
+
 				if (in_array(false, $result, true))
 				{
 					// There are some errors in the plugins
@@ -189,7 +201,10 @@ class MediaControllerFolder extends JControllerLegacy
 				$dispatcher->trigger('onContentAfterSave', array('com_media.folder', &$object_file, true));
 				$this->setMessage(JText::sprintf('COM_MEDIA_CREATE_COMPLETE', substr($object_file->filepath, strlen(COM_MEDIA_BASE))));
 			}
+
 			$this->input->set('folder', ($parent) ? $parent.'/'.$folder : $folder);
 		}
+
+		return true;
 	}
 }
