@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note3
 
+07-Apr-2013 Michael Babker
+ ^ [#30502] Replace use of JRequest in com_media
+
 07-Apr-2013 Jean-Marie Simonet
  # [#30226] *TAGS: Getting rid of all aspects concerning lang associations
 
@@ -45,7 +48,7 @@ $ -> Language fix or change
 04-Apr-2013 Jean-Marie Simonet
  # [#30454] Tags: Adding Tags via Batch function replaces all previous tags. Thanks David and Elin.
  # [#30463] Missing closing div in compact tag layout. Thanks Thomas Hunziker and Constantin Romankiewicz
- # [#30464] ACL Undefined variable error in contentadministrator.php on line 112. Thanks Constantin Romankiewicz 
+ # [#30464] ACL Undefined variable error in contentadministrator.php on line 112. Thanks Constantin Romankiewicz
  # [#30062] Base Item option in mod_menu has no effect [regression]. Thanks René Alain Erichsen
  # [#30422] Tags drill down incorrectly finds match to multi-tag tagged items menu item. Thanks Mark
  # [#30210] Undefined index errors by using the style 'beezTabs' at an beez template. Thanks Constantin Romankiewicz
